force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Autoline_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Autoline_Order_Date__c</fullName>
    <label>Autoline Order Date</label>
    <type>Date</type>
</CustomField>