force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <length>200</length>
    <type>Text</type>
</CustomField>