force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Comm__c.field-meta.xml
<CustomField>
    <fullName>Comm__c</fullName>
    <description>Commission number for vehicle</description>
    <label>Comm</label>
    <length>20</length>
    <type>Text</type>
</CustomField>