force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Custom_Lot_No__c.field-meta.xml
<CustomField>
    <fullName>Custom_Lot_No__c</fullName>
    <label>Custom Lot No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>