force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Duty_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Duty_Payment_Date__c</fullName>
    <label>Duty Payment Date</label>
    <type>Date</type>
</CustomField>