force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <label>Engine</label>
    <length>50</length>
    <type>Text</type>
</CustomField>