force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <inlineHelpText>mm/mm Format ONLY</inlineHelpText>
    <label>EDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>