force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Fran__c.field-meta.xml
<CustomField>
    <fullName>Fran__c</fullName>
    <label>Fran</label>
    <length>10</length>
    <type>Text</type>
</CustomField>