force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/hasHighlightOptions__c.field-meta.xml
<CustomField>
    <fullName>hasHighlightOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Highlight Options</label>
    <type>Checkbox</type>
</CustomField>