force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Highlight_Options__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Options__c</fullName>
    <label>Highlight Options</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>