force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Internal_External__c.field-meta.xml
<CustomField>
    <fullName>Internal_External__c</fullName>
    <formula>IF(ISBLANK(Bonded_Date__c), &apos;External&apos;, &apos;Internal&apos;)</formula>
    <label>Internal/External</label>
    <type>Text</type>
</CustomField>