force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Lot_No__c.field-meta.xml
<CustomField>
    <fullName>Lot_No__c</fullName>
    <label>Lot No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>