force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/OMV__c.field-meta.xml
<CustomField>
    <fullName>OMV__c</fullName>
    <description>OMV for the vehicle</description>
    <label>OMV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>