force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Production_Month__c.field-meta.xml
<CustomField>
    <fullName>Production_Month__c</fullName>
    <inlineHelpText>YYYYMM format</inlineHelpText>
    <label>Production Month (YYYYMM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>