force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>F = Finance Clearance
I = Invoice
A = Adopted
O = Order
R = Reserve</description>
    <inlineHelpText>F = Finance Clearance
I = Invoice
A = Adopted
O = Order
R = Reserve</inlineHelpText>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Adopted</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Order</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Reserve</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Finance Clearance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>