force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Salestype__c.field-meta.xml
<CustomField>
    <fullName>Salestype__c</fullName>
    <label>Salestype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
                <label>Retail</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Daimler</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Company</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Demonstrator</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Embassy</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Inter-Co</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>PC - Zero Rated</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Off Peak</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Export - Out of scope</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>