force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Stock_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_In_Date__c</fullName>
    <description>For Warehouse Management</description>
    <label>Stock In Date</label>
    <type>Date</type>
</CustomField>