force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Stock_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Out_Date__c</fullName>
    <label>Stock Out Date</label>
    <type>Date</type>
</CustomField>