force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Variant_ID__c.field-meta.xml
<CustomField>
    <fullName>Variant_ID__c</fullName>
    <label>Variant ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>