force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID</inlineHelpText>
    <label>Vehicle ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>