force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Vehicle_Movement_Location__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Movement_Location__c</fullName>
    <label>Vehicle Movement Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>