force-app/main/default/objects/MB_Stock_Vehicle_Master__c/fields/Vessel__c.field-meta.xml
<CustomField>
    <fullName>Vessel__c</fullName>
    <label>Vessel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>