force-app/main/default/objects/MB_Stock_Vehicle_Master__c/recordTypes/Existing_Stock.recordType-meta.xml
<RecordType>
    <fullName>Existing_Stock</fullName>
    <active>true</active>
    <label>Existing Stock</label>
</RecordType>