force-app/main/default/objects/MB_Stock_Vehicle_Master__c/recordTypes/Indent_Stock.recordType-meta.xml
<RecordType>
    <fullName>Indent_Stock</fullName>
    <active>true</active>
    <label>Indent Stock</label>
</RecordType>