force-app/main/default/objects/MB_Stock_Vehicle_Master__c/listViews/Admin.listView-meta.xml
<ListView>
    <fullName>Admin</fullName>
    <columns>Vehicle_ID__c</columns>
    <columns>NAME</columns>
    <columns>VariantDescription__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Autoline__c</columns>
    <columns>hasHighlightOptions__c</columns>
    <columns>Highlight_Options__c</columns>
    <columns>Batch_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>equals</operation>
        <value>VICTORIOUS ACE V. 0059A</value>
    </filters>
    <label>Admin</label>
</ListView>