force-app/main/default/objects/MB_Stock_Vehicle_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Autoline__c</columns>
    <columns>Comm__c</columns>
    <columns>Progress__c</columns>
    <columns>VariantDescription__c</columns>
    <columns>Colour__c</columns>
    <columns>Trim__c</columns>
    <columns>Production_Month__c</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>Production_Status__c</columns>
    <columns>PO__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>equals</operation>
        <value>VICTORIOUS ACE V. 0059A</value>
    </filters>
    <label>All</label>
</ListView>