force-app/main/default/objects/MB_Stock_Vehicle_Master__c/listViews/Available_Stocks_to_be_Released.listView-meta.xml
<ListView>
    <fullName>Available_Stocks_to_be_Released</fullName>
    <columns>NAME</columns>
    <columns>Comm__c</columns>
    <columns>Colour__c</columns>
    <columns>Trim__c</columns>
    <columns>Production_Month__c</columns>
    <columns>Status_Autoline__c</columns>
    <columns>Progress__c</columns>
    <columns>VariantDescription__c</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>Remarks__c</columns>
    <columns>Status__c</columns>
    <columns>PO__c</columns>
    <columns>Location__c</columns>
    <columns>Highlight_Options__c</columns>
    <columns>Production_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>equals</operation>
        <value>OPAL ACE V. 0087A</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MB_Stock_Vehicle_Master__c.Existing_Stock</value>
    </filters>
    <label>Available Stocks to be Released</label>
</ListView>