force-app/main/default/objects/MB_Stock_Vehicle_Master__c/listViews/Exceptions.listView-meta.xml
<ListView>
    <fullName>Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_ID__c</columns>
    <columns>Comm__c</columns>
    <columns>Status__c</columns>
    <columns>Progress__c</columns>
    <columns>Status_Autoline__c</columns>
    <columns>Remarks__c</columns>
    <columns>Autoline_Sales_Order__c</columns>
    <columns>VariantDescription__c</columns>
    <columns>Colour__c</columns>
    <columns>Trim__c</columns>
    <columns>Production_Month__c</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>PO__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MB_Stock_Vehicle_Master__c.Existing_Stock</value>
    </filters>
    <filters>
        <field>Progress__c</field>
        <operation>equals</operation>
        <value>R</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Available</value>
    </filters>
    <label>Autoline Reserve But SF Not</label>
</ListView>