force-app/main/default/objects/MB_Stock_Vehicle_Master__c/listViews/Indented_Stocks_by_SE.listView-meta.xml
<ListView>
    <fullName>Indented_Stocks_by_SE</fullName>
    <columns>NAME</columns>
    <columns>Variant__c</columns>
    <columns>Colour__c</columns>
    <columns>Trim__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Autoline__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MB_Stock_Vehicle_Master__c.Indent_Stock</value>
    </filters>
    <label>Indented Stocks by SE</label>
</ListView>